# abacas

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.js  flake.nix  help.html  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/workflows/: docs.yml  tests.yml
abacas/: all.html  index.html  sidebar-items.js
abacas-cli/: Cargo.toml  README.md
abacas-cli/src/: expr.rs  expression.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  token.rs
abacas-lib/: Cargo.toml  README.md
abacas-lib/benches/: polynomial.rs
az/: all.html  fn.cast.html  fn.checked_cast.html  fn.overflowing_cast.html  fn.saturating_cast.html  fn.unwrapped_cast.html  fn.wrapping_cast.html  index.html  struct.Round.html  trait.Az.html  trait.Cast.html  trait.CastFrom.html  trait.CheckedAs.html  trait.CheckedCast.html  trait.CheckedCastFrom.html  trait.OverflowingAs.html  trait.OverflowingCast.html  trait.OverflowingCastFrom.html  trait.SaturatingAs.html  trait.SaturatingCast.html  trait.SaturatingCastFrom.html  trait.UnwrappedAs.html  trait.UnwrappedCast.html  trait.UnwrappedCastFrom.html  trait.WrappingAs.html  trait.WrappingCast.html  trait.WrappingCastFrom.html
cas/: Cargo.toml
cli/: Cargo.toml
examples/: demo.rs  polydiv.rs
gmp_mpfr_sys/: all.html  index.html  macro.MPFR_DECL_INIT.html  macro.mpfr_round_nearest_away.html
rug/: all.html  index.html  struct.Rational.html  trait.Assign.html  trait.Complete.html
src/: bin.rs  error.rs  expr.rs  lexer.rs  lib.rs  main.rs  monomial.rs  number.rs  parser.rs  polynomial.rs  structs.rs
tests/: polynomial.rs
(+1268 files in other folders)
