[package]
name = "abacas-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
abacas.workspace = true
argh = { version = "0.1.19", default-features = false, features = ["help"] }
dark-light = "2.0.0"
logos = "0.16.1"
rug.workspace = true
rustyline = { version = "18.0.0", features = ["derive"] }
syntect = "5.3.0"
