[package]
name = "abacas-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
abacas = { workspace = true }
argh = { workspace = true }
dark-light = { workspace = true }
logos = { workspace = true }
rug = { workspace = true }
rustyline = { workspace = true, features = ["derive"] }
syntect = { workspace = true }
